...
  String get errorLoadingGroups => 'Error Loading Groups';

  @override
  String get retry => 'Retry';

  @override
  String get createGroup => 'Create Group';

  @override
  String get groupDetailsComingSoon => 'Group details page coming soon!';

  @override
  String get noGroupsYet => 'You\'re not part of any group yet';
...
  String get clearFilter => 'Clear filter';

  @override
  String get filterByDate => 'Filter by date';

  @override
  String get groupNameRequired => 'Group Name *';

  @override
  String get groupNameHint => 'e.g., Beach Volleyball Crew';

  @override
  String get groupDescriptionHint =>
...
  String get groupInvitedBadge => 'Invited';

  @override
  String get leaveGroup => 'Leave Group';

  @override
  String get selectAll => 'Select All';

  @override
  String get clearAll => 'Clear All';

  @override
  String get upload => 'Upload';
...
      'Games will appear here after they are completed';

  @override
  String get finalScore => 'Final Score';

  @override
  String get eloRatingChanges => 'ELO Rating Changes';

  @override
  String get unknownPlayer => 'Unknown Player';

  @override
  String gameNumber(int number) {
...
